# Jetson-SOTA-

./: 11.py  LICENSE  README.md  gitignore.txt  v26_maconnx.py  v26_mactorch.py  yolo_usb.cpp  yolov26_export.py
Yolov26_Tensor_cpp/: CMakeLists.txt  main.cpp  main_csi.cpp  main_usb.cpp  yolo.cpp  yolo.h
